SERVER-17141 Don't abort if ENOENT is returned from session->truncate()

(cherry picked from commit d47529bb1ad51e65f5262ace4efcaff96062e028)